refactor: add category field to my-page PostResponse
- 내가 쓴 글, 내 스크랩의 Response 객체에 카테고리 필드 추가